# cpptemplate

./: .clang-format  .clang-tidy  .clangd  .gitignore  check-configs.sh  set-home-configs.sh
docs/: books.md  buildsystem.md  collection.md  docs.md  guide.md  online-tools.md  project-tools.md
examples/build_system/cmake/cmake-starter/: CMakeLists.txt
examples/build_system/cmake/cmake-starter2/: CMakeLists.txt  run.sh
examples/build_system/cmake/cmake-starter2/src/: CMakeLists.txt  config.h.in
examples/build_system/meson/meson-starter/: run.sh
examples/build_system/meson/meson-starter/src/: main.cpp  version.h.in
examples/build_system/meson/meson-starter2/: meson.build  run.sh
examples/buildsystem/cmake/cmake-starter/: .clang-format-ignore  CMakeLists.txt  run.sh
examples/buildsystem/cmake/cmake-starter/src/: CMakeLists.txt  ConfigVersion.h.in  main.cpp
examples/buildsystem/cmake/cmake-starter2/: CMakeLists.txt
examples/buildsystem/cmake/cmake-starter2/include/: config.h
examples/buildsystem/cmake/cmake-starter2/src/: CMakeLists.txt  config.h.in  main.cpp
examples/buildsystem/meson/meson-starter/: meson.build
examples/buildsystem/meson/meson-starter/src/: main.cpp  meson.build
examples/buildsystem/meson/meson-starter2/: meson.build  meson_options.txt  run.sh
examples/buildsystem/meson/meson-starter2/src/: meson.build
examples/buildsystem/meson/meson-starter2/src/pch/: cpp_pch.hpp
